# chatgpt-web-desktop

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.github/workflows/: swift-macos-release.yml
cloak/: .gitignore  Package.swift  README.md  task.md  walkthrough.md
cloak/.playwright-mcp/: page-2026-06-09T13-57-40-338Z.yml
cloak/cloak-picker/: index.html
cloak/packaging/: check-picker-fresh.sh  icon-cloak-picker.icns  install-local-app.sh  install-updater.sh  launch-account.sh  make-account-app.sh  make-app.sh  patch-chromium.sh  pick-account.sh  proxy-relay.py  set-pwa-icon.sh  update-chromium.sh  verify-challenge-contract.sh
cloak/selftest/: probe.html  run-live-challenge-audit.mjs  run-selftest.mjs
scripts/: check-privacy.sh
swift/: .gitignore  Package.swift  README.md
swift/packaging/: Info.plist  (+9 more)
tauri/: .gitignore  README.md  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/permissions/autogenerated/: append_blob_download.toml  cancel_blob_download.toml  cmd_burn_current_profile.toml  cmd_clone_profile.toml  cmd_create_profile.toml  cmd_delete_profile.toml  cmd_export_cookies.toml  cmd_import_cookies.toml  cmd_import_profile.toml  cmd_rename_profile.toml  cmd_set_homepage.toml  finish_blob_download.toml  set_native_webview_zoom.toml  start_blob_download.toml
tauri/src-tauri/src/: browser.rs  chatgpt_webview.js  cookies.rs  fingerprint.rs  lib.rs  main.rs  menu.rs  privacy.rs  profile.rs
(+34 files in other folders)
