[package]
name = "chatgpt-rust"
version = "0.2.0"
description = "Cross-platform ChatGPT desktop wrapper with privacy spaces, built on Rust/Tauri."
authors = ["moonlitpoet"]
edition = "2021"
license = "MIT"

[lib]
name = "chatgpt_tauri_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chatgpt-rust"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
arboard = "3"

[dev-dependencies]
tempfile = "3"
